--- a/client/WebContent/index1.html
+++ b/client/WebContent/index1.html
@@ -13,6 +13,22 @@
 	name="description" />
 <meta content="" name="author" />
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
+<script type="text/javascript">
+	var username = "mrsunnycream";
+	var _blogger = username;
+	var blog_address = "http://blog.csdn.net/mrsunnycream";
+	var static_host = "http://csdnimg.cn/release/phoenix/";
+	var currentUserName = "";
+	var fileName = '50921012';
+	var commentscount = 0;
+	var islock = false
+	window.quickReplyflag = true;
+	var totalFloor = 0;
+	var isBole = false;
+	var isDigg = false;
+	var isExpert = false;
+	var isAdm = false;
+</script>
 <link
 	href="../theme/assets/global/plugins/font-awesome/css/font-awesome.min.css"
 	rel="stylesheet" type="text/css" />
@@ -25,20 +41,6 @@
 <link
 	href="../theme/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css"
 	rel="stylesheet" type="text/css" />
-<!-- END GLOBAL MANDATORY STYLES -->
-<!-- BEGIN PAGE LEVEL PLUGINS -->
-<!-- <link
-	href="../theme/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css"
-	rel="stylesheet" type="text/css" />
-<link href="../theme/assets/global/plugins/morris/morris.css"
-	rel="stylesheet" type="text/css" />
-<link
-	href="../theme/assets/global/plugins/fullcalendar/fullcalendar.min.css"
-	rel="stylesheet" type="text/css" />
-<link href="../theme/assets/global/plugins/jqvmap/jqvmap/jqvmap.css"
-	rel="stylesheet" type="text/css" /> -->
-<!-- END PAGE LEVEL PLUGINS -->
-<!-- BEGIN THEME GLOBAL STYLES -->
 <link href="../theme/assets/global/css/components.min.css"
 	rel="stylesheet" id="style_components" type="text/css" />
 <link href="../theme/assets/global/css/plugins.min.css" rel="stylesheet"
@@ -77,9 +79,12 @@
 <link href="../theme/assets/apps/css/todo-2.min.css" rel="stylesheet"
 	type="text/css" />
 
+<link href="../theme/assets/pages/css/profile.min.css" rel="stylesheet"
+	type="text/css" />
+<link href="../theme/assets/global/css/components.min.css"
+	rel="stylesheet" id="style_components" type="text/css" />
 </head>
 <!-- END HEAD -->
-
 
 <body
 	class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
@@ -92,7 +97,7 @@
 				<!-- BEGIN TOP NAVIGATION MENU -->
 				<div class="top-menu">
 					<ul class="nav navbar-nav pull-right">
-						<li class="separator hide"></li>
+						<!-- <li class="separator hide"></li> -->
 						<li class="dropdown dropdown-user dropdown-dark"><a
 							href="javascript:;" class="dropdown-toggle"
 							data-toggle="dropdown" data-hover="dropdown"
@@ -101,40 +106,51 @@
 								<img alt="" class="img-circle" />
 						</a>
 							<ul class="dropdown-menu dropdown-menu-default">
-								<li><a href="page_user_profile_1.html"> <i
-										class="icon-user"></i>谷歌
+								<li><a href="https://google.com"> <i class="icon-user"></i>谷歌
 								</a></li>
-								<li><a href="app_calendar.html"> <i
+								<li><a href="https://github.com"> <i
 										class="icon-calendar"></i>GitHub
 								</a></li>
-								<li><a href="app_calendar.html"> <i
+								<li><a href="https://www.baidu.com"> <i
 										class="icon-calendar"></i>百度
 								</a></li>
-								<li><a href="app_calendar.html"> <i
+								<li><a href="https://map.baidu.com"> <i
 										class="icon-calendar"></i>百度地图
 								</a></li>
+								<li><a href="https://note.youdao.com"> <i
+										class="icon-calendar"></i>有道云笔记
+								</a></li>
+								<li><a href="http://fanyi.youdao.com"> <i
+										class="icon-calendar"></i>有道翻译
+								</a></li>
 							</ul></li>
 						<li class="dropdown dropdown-user dropdown-dark"><a
-							href="javascript:;" class="dropdown-toggle"
-							data-toggle="dropdown" data-hover="dropdown"
+							href="http://www.baidu.com" class="dropdown-toggle"
+							data-hover="dropdown"
 							data-close-others="true"> <span
-								class="username username-hide-on-mobile">常用工具</span> <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
+								class="username username-hide-on-mobile">关于作者</span> <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
 								<img alt="" class="img-circle" />
-						</a>
-							<ul class="dropdown-menu dropdown-menu-default">
-								<li><a href="page_user_profile_1.html"> <i
-										class="icon-user"></i>联系作者
-								</a></li>
-								<li><a href="app_calendar.html"> <i
-										class="icon-calendar"></i>关于作者
-								</a></li>
-							</ul></li>
+						</a></li>
+						<!-- <li class="dropdown dropdown-user dropdown-dark">
+						<a href="http://passport.soaer.com:8888/login.html?redirectUrl=http%3A%2F%2Fsoaer.com%3A8888%2Findex" class="dropdown-toggle"
+							 data-hover="dropdown"
+							data-close-others="true"> <span
+								class="username username-hide-on-mobile">登陆</span>
+								<img alt="" class="img-circle" />
+						</a></li>
 						<li class="dropdown dropdown-user dropdown-dark"><a
+							href="http://passport.soaer.com:8888/login.html?redirectUrl=http%3A%2F%2Fsoaer.com%3A8888%2Findex" class="dropdown-toggle"
+							data-hover="dropdown"
+							data-close-others="true"> <span
+								class="username username-hide-on-mobile">注册</span>
+								<img alt="" class="img-circle" />
+						</a></li> -->
+						<!-- <li class="dropdown dropdown-user dropdown-dark"><a
 							href="javascript:;" class="dropdown-toggle"
 							data-toggle="dropdown" data-hover="dropdown"
 							data-close-others="true"> <span
-								class="username username-hide-on-mobile">Sunny</span> <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
-								<img alt="" class="img-circle"
+								class="username username-hide-on-mobile"> Sunny </span> <img
+								alt="" class="img-circle"
 								src="../theme/assets/layouts/layout4/img/sunny.png" />
 						</a>
 							<ul class="dropdown-menu dropdown-menu-default">
@@ -144,7 +160,7 @@
 								<li><a href="app_calendar.html"> <i
 										class="icon-calendar"></i>关于作者
 								</a></li>
-							</ul></li>
+							</ul></li> -->
 						<!-- END USER LOGIN DROPDOWN -->
 						<!-- BEGIN QUICK SIDEBAR TOGGLER -->
 						<!-- END QUICK SIDEBAR TOGGLER -->
@@ -168,20 +184,13 @@
 			<!-- DOC: Set data-auto-scroll="false" to disable the sidebar from auto scrolling/focusing -->
 			<!-- DOC: Change data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 			<div class="page-sidebar navbar-collapse collapse">
-				<!-- BEGIN SIDEBAR MENU -->
-				<!-- DOC: Apply "page-sidebar-menu-light" class right after "page-sidebar-menu" to enable light sidebar menu style(without borders) -->
-				<!-- DOC: Apply "page-sidebar-menu-hover-submenu" class right after "page-sidebar-menu" to enable hoverable(hover vs accordion) sub menu mode -->
-				<!-- DOC: Apply "page-sidebar-menu-closed" class right after "page-sidebar-menu" to collapse("page-sidebar-closed" class must be applied to the body element) the sidebar sub menu mode -->
-				<!-- DOC: Set data-auto-scroll="false" to disable the sidebar from auto scrolling/focusing -->
-				<!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
-				<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
-				<!-- <ul class="page-sidebar-menu   " data-keep-expanded="false"
+				<ul class="page-sidebar-menu   " data-keep-expanded="false"
 					data-auto-scroll="true" data-slide-speed="200">
-					<li class="nav-item start active open"><a href="javascript:;"
+					<!-- <li class="nav-item start active open"><a href="javascript:;"
 						class="nav-link nav-toggle"> <i class="icon-home"></i> <span
 							class="title">首页</span>
-					</a></li>
-					<li class="heading">
+					</a></li> -->
+					<!-- <li class="heading">
 						<h3 class="uppercase">模块管理</h3>
 					</li>
 					<li class="nav-item  "><a href="javascript:;"
@@ -203,8 +212,97 @@
 					<li class="nav-item  "><a href="javascript:;"
 						class="nav-link nav-toggle"> <i class="fa fa-wrench"></i> <span
 							class="title">修改密码</span>
-					</a></li>
-				</ul> -->
+					</a></li> -->
+
+					<div class="profile-sidebar">
+						<!-- PORTLET MAIN -->
+						<div class="portlet light profile-sidebar-portlet bordered">
+							<!-- SIDEBAR USERPIC -->
+							<div class="profile-userpic">
+								<img src="../theme/assets/pages/media/profile/IMG_1437.jpg"
+									class="img-responsive" alt="">
+							</div>
+							<!-- END SIDEBAR USERPIC -->
+							<!-- SIDEBAR USER TITLE -->
+							<div class="profile-usertitle">
+								<div class="profile-usertitle-name">Sunny</div>
+								<!-- <div class="profile-usertitle-job">开发者</div> -->
+							</div>
+							<!-- END SIDEBAR USER TITLE -->
+							<!-- SIDEBAR BUTTONS -->
+							<!-- <div class="profile-userbuttons">
+								<button type="button" class="btn btn-circle green btn-sm">Follow</button>
+								<button type="button" class="btn btn-circle red btn-sm">Message</button>
+							</div> -->
+							<!-- END SIDEBAR BUTTONS -->
+							<!-- SIDEBAR MENU -->
+							<!-- <div class="profile-usermenu">
+								<ul class="nav">
+									<li class="active"><a href="page_user_profile_1.html">
+											<i class="icon-home"></i> Overview
+									</a></li>
+									<li><a href="page_user_profile_1_account.html"> <i
+											class="icon-settings"></i> Account Settings
+									</a></li>
+									<li><a href="page_user_profile_1_help.html"> <i
+											class="icon-info"></i> Help
+									</a></li>
+								</ul>
+							</div> -->
+							<!-- END MENU -->
+						</div>
+						<div class="portlet light bordered">
+							<!-- STAT -->
+							<div class="row list-separated profile-stat">
+								<div class="col-md-4 col-sm-4 col-xs-6">
+									<div class="uppercase profile-stat-title">37</div>
+									<div class="uppercase profile-stat-text">原创</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-6">
+									<div class="uppercase profile-stat-title">51</div>
+									<div class="uppercase profile-stat-text">转载</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-6">
+									<div class="uppercase profile-stat-title">61</div>
+									<div class="uppercase profile-stat-text">阅读</div>
+								</div>
+							</div>
+							<!-- END STAT -->
+							<div>
+								<h4 class="profile-desc-title">最近发表的文章</h4>
+								<!-- <span class="profile-desc-text"> Lorem ipsum dolor sit amet diam nonummy nibh dolore. </span> -->
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.keenthemes.com">java实现单链表逆转</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.twitter.com/keenthemes/">OpenResty开发指南</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+								<div class="margin-top-20 profile-desc-link">
+									<a href="http://www.facebook.com/keenthemes/">lua脚本开发利器</a>
+								</div>
+							</div>
+						</div>
+						<!-- END PORTLET MAIN -->
+					</div>
+				</ul>
 				<!-- END SIDEBAR MENU -->
 			</div>
 			<!-- END SIDEBAR -->
@@ -218,22 +316,21 @@
 				<div class="page-head">
 					<!-- BEGIN PAGE TITLE -->
 					<div class="page-title">
-						<h1>
+						<h2>
 							OpenSaml <small>SSO实现文档</small>
-						</h1>
-
+						</h2>
 					</div>
 					<!-- END PAGE TITLE -->
 					<!-- BEGIN PAGE TOOLBAR -->
 					<!-- END PAGE TOOLBAR -->
 				</div>
 				<div class="noteAd">
-					<img src="../theme/assets/netease.png" border="0" width=100%
-						height=100% />
+					<a href="javascript:;" class="btn btn-circle red disabled">原创</a> <a
+						href="javascript:;" class="btn btn-circle green disabled">标签：</a>
+					<a href="javascript:;" class="btn btn-circle green disabled">java</a>
+					<a href="javascript:;" class="btn btn-circle green disabled">nginx</a>
+					<a href="javascript:;" class="btn btn-circle green disabled">Openresty</a>
 				</div>
-				<!-- <div class="row">
-                	
-                </div> -->
 
 				<!-- --------------------MarkDown文件去也--------------------------- -->
 				<div id='write' class='is-mac'>
@@ -460,7 +557,8 @@
 																							width="27px" height="27px">
 																						</a>
 																						<div class="media-body todo-comment">
-																							<button type="button" class="todo-comment-btn btn btn-circle btn-default btn-sm">&nbsp;
+																							<button type="button"
+																								class="todo-comment-btn btn btn-circle btn-default btn-sm">&nbsp;
 																								回复 &nbsp;</button>
 																							<p class="todo-comment-head">
 																								<span class="todo-comment-username">乔峰</span>
@@ -595,29 +693,6 @@
 		type="text/javascript"></script>
 	<!-- END CORE PLUGINS -->
 	<!-- BEGIN PAGE LEVEL PLUGINS -->
-	<!-- <script src="../theme/assets/global/plugins/moment.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/morris/morris.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/morris/raphael-min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/counterup/jquery.waypoints.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/amcharts.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/serial.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/pie.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/radar.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/themes/light.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/themes/patterns.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amcharts/themes/chalk.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/ammap/ammap.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/ammap/maps/js/worldLow.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/amcharts/amstockcharts/amstock.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/horizontal-timeline/horizontal-timeline.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/flot/jquery.flot.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/flot/jquery.flot.resize.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/flot/jquery.flot.categories.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/jquery-easypiechart/jquery.easypiechart.min.js" type="text/javascript"></script>
-	<script src="../theme/assets/global/plugins/jquery.sparkline.min.js" type="text/javascript"></script> -->
 	<!-- END PAGE LEVEL PLUGINS -->
 	<!-- BEGIN THEME GLOBAL SCRIPTS -->
 	<script src="../theme/assets/global/scripts/app.min.js"
@@ -632,6 +707,8 @@
 		src="../theme/assets/layouts/global/scripts/quick-sidebar.min.js"
 		type="text/javascript"></script>
 	<script src="../theme/assets/layouts/global/scripts/quick-nav.min.js"
+		type="text/javascript"></script>
+	<script src="../theme/assets/operate/blog.min.js"
 		type="text/javascript"></script>
 	<!-- END THEME LAYOUT SCRIPTS -->
 </body>
